log
Sun, May  4, 2025  5:21:48 PM: 
 tests:  1|8
total_score: 0/70
5729e4d
Sun, May  4, 2025  5:58:54 PM: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:46:5: error: expected ';' before 'return'
     return new;
     ^~~~~~
treemap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
9425871
Sun, May  4, 2025  5:59:20 PM: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
4e4228e
Sun, May  4, 2025  6:02:25 PM: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:92:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
8cddb24
Sun, May  4, 2025  6:02:46 PM: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
856c938
Sun, May  4, 2025  6:03:25 PM: 
 treemap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
d4d849e
Sun, May  4, 2025  6:08:16 PM: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  11|6
total_score: 15/70
eb3dc4b
Sun, May  4, 2025  6:15:13 PM: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  11|6
total_score: 15/70
7511cb0
Sun, May  4, 2025  6:16:55 PM: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  11|6
total_score: 15/70
32e2a14
Sun, May  4, 2025  6:36:53 PM: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  13|5
total_score: 25/70
6fcd682
Sun, May  4, 2025  6:40:21 PM: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
91ff252
Sun, May  4, 2025  6:50:12 PM: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  16|4
total_score: 30/70
49f601c
Sun, May  4, 2025  6:59:56 PM: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  17|4
total_score: 35/70
92878b5
Sun, May  4, 2025  7:00:29 PM: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  18|3
total_score: 40/70
df1c63f
Sun, May  4, 2025  7:03:18 PM: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:177:5: error: expected ',' or ';' before 'tree'
     tree->current = minNode
     ^~~~
treemap.c:176:15: error: unused variable 'minNode' [-Werror=unused-variable]
     TreeNode* minNode = minimum(tree->root)
               ^~~~~~~
treemap.c:180:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
92658eb
Sun, May  4, 2025  7:03:25 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:177:5: error: expected ',' or ';' before 'tree'
     tree->current = minNode;
     ^~~~
32ccb9a
Sun, May  4, 2025  7:03:38 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
1b4abda
